@@ -2,4 +2,5 @@ Giles Knap <giles.knap@diamond.ac.uk>
 Knap <hgv27681@pc0082.cs.diamond.ac.uk>
 Yann Rouillard <yann@pleiades.fr.eu.org>
 Yann Rouillard <yrouillard@octo.com>
+giles.knap@dimaond.ac.uk <Piggy00g>
 gilesknap <giles.knap@diamond.ac.uk>
