@@ -5,7 +5,11 @@ module_name = "gphotos-sync"
 
 packages = [x for x in find_packages()]
 setup(
+    name=module_name,
     setup_requires=['pbr'],
     pbr=True,
-    packages=packages)
+    version='0.9.5',
+    packages=packages,
+    package_data={'': ['gphotos/sql/gphotos_create.sql']},
+    include_package_data=True)
 
